NIFI-14135 Added PMD's UseStandardCharsets check, fixed those places where there violations and used Intellij's rule to find other places where StandardCharsets could be used and corrected them.
Signed-off-by: Pierre Villard <pierre.villard.fr@gmail.com>

This closes #9614.